--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.4",
+    "@tiptap/react": "^2.0.0-beta.114",
+    "@tiptap/starter-kit": "^2.0.0-beta.191",
     "axios": "^0.25.0",
     "daisyui": "^1.25.4",
     "mongodb": "^4.3.1",
@@ -16,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.1",
-    "react-paginate": "^8.1.0"
+    "react-paginate": "^8.1.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
